# claycode

./: .gitattributes  LICENSE  Makefile  README.md
.github/workflows/: static.yml
claycode/: about.html  index.html  page_header.html  page_loader.js  scenes.js  style.css
claycode/conversion/: bit_stream.js  convert.js  converter.js
claycode/drawing/: debug.js  draw.js  draw_claycode.js  draw_polygon_claycode.js  draw_rectangle_claycode.js
claycode/geometry/: geometry.js  math.js  polygon_offset.js  polygon_partition.js  vector.js
claycode/pages/: footer.html  header.html  scene_polygon.html  scene_qr.html  scene_shape_shift.html  scene_static_double.html  scene_test.html  scene_tree_generator.html  style.css
claycode/scanner/: settings.gradle.kts
claycode/scenes/: scene_polygon.js  scene_qr.js  scene_shape_shift.js  scene_static_double.js  scene_test.js  scene_tree_generator.js  shape_shift.js  static_double.js  utils.js  venn.js
claycode/test/: test_conversion.js  test_geometry.js  test_polygon_partition.js  test_text_bit.js  test_utils.js
claycode/tree/: tree.js  tree_node.js
experiments/: README.md  encoding_k_efficiency.ipynb  n_trees.ipynb
experiments/bit_to_tree/: abe1994.ipynb  cantor_study.ipynb  encoding_comparison.ipynb  functional_power.ipynb  number_of_trees_catalan.ipynb  simplex_study.ipynb  square_study.ipynb  two_choices_evaluation.ipynb  two_choices_k_efficiency.ipynb
experiments/pixel_packer/: packer.ipynb
experiments/scanner/: scanner.ipynb
experiments/siggraph_2025_artifact/: README.md  requirements.txt
experiments/tree/: encoding.py  n_trees.ipynb
experiments/tree_lib/: bit_stream.py  tree.py  util.py
generator/: Makefile  README.md  index.html  page_loader.js
generator/conversion/: convert.js
generator/geometry/: geometry.js  math.js  polygon_offset.js  polygon_partition.js  shapes.js  vector.js
generator/image_processing/: binary_image.js  coloris.min.css  coloris.min.js  contour.js  simplify.js  util.js
generator/packer/: draw.js  draw_polygon_claycode.js  draw_rectangle_claycode.js  pack.js  packer_brush.js
generator/pages/: about.html  header.html  scene_claycode.html  scene_compare.html  scene_fragment.html  scene_image_claycode.html  scene_image_fragment.html  scene_polygon.html  scene_shape_shift.html  scene_static_double.html  scene_tree_generator.html  style.css
scanner/: README.md  settings.gradle.kts
scanner/app/src/main/cpp/: CMakeLists.txt  build_touch_graph.hpp  filters.hpp  find_shapes.hpp  image_processor.cpp  topology_extractor.cpp
website/: Makefile
(+264 files in other folders)
